fixed some spacing on top nav

--- a/style/about_style.css
+++ b/style/about_style.css
@@ -258,7 +258,7 @@ body {
 
 .personal_links {
   position: fixed;
-  top: 50px;
+  top: 44px;
   left: 50px;
   z-index: 1;
   /* color: white; */
@@ -278,7 +278,7 @@ body {
 
 .name_tag {
   position: fixed;
-  top: 56px;
+  top: 50px;
   left: 100px;
   font-family: 'Raleway', sans-serif;
   color: var(--primary_text);
@@ -381,6 +381,26 @@ body {
   
   /* CSS */
 
+  .burger_menu {
+    width: 40px;
+  }
+
+  .burger_line_top {
+    margin-bottom: 5px;
+  }
+
+  .burger_line_bot {
+    margin-top: 5px;
+  }
+
+  .burger_line_top_clicked {
+    margin-bottom: -1px;
+  }
+
+  .burger_line_bot_clicked {
+    margin-top: -1px;
+  }
+
 }
 
 @media (max-width: 560px) {
@@ -422,6 +442,26 @@ body {
 
   .about_me_text_content {
     padding: 0 50px;
+  }
+
+  .burger_menu {
+    width: 30px;
+  }
+
+  .burger_line_top {
+    margin-bottom: 3px;
+  }
+
+  .burger_line_bot {
+    margin-top: 3px;
+  }
+
+  .burger_line_top_clicked {
+    margin-bottom: -1px;
+  }
+
+  .burger_line_bot_clicked {
+    margin-top: -1px;
   }
 
 
